changed icon styles

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="logos/logo.png" />
+    <link rel="icon" type="image/png" href="/logos/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MotoGP Results Manager</title>
     <link rel="stylesheet" href="src/main.css">
